Cambio de video a iframe
he insertado un iframe temporal del video linea 631

--- a/index.html
+++ b/index.html
@@ -604,7 +604,6 @@ body #bsap_aplink, body #bsap_aplink:hover { display: block; font-size: 10px; ma
 					</div>
 			</div>
 
-
 			<div class="card_item_home">
 					<p class="price_card"><i class="far fa-coin"></i> 1.000</p>
 					<img src="img/hongo3.jpeg" class="img_store_card">
@@ -618,8 +617,6 @@ body #bsap_aplink, body #bsap_aplink:hover { display: block; font-size: 10px; ma
 						<h5 class="opt_card"><i class="fas fa-cart-plus"></i> Añadir al carrito</h5>
 					</div>
 			</div>
-
-
 		</div>
 
 		<div class="" style="background:moccasin;">
@@ -630,12 +627,10 @@ body #bsap_aplink, body #bsap_aplink:hover { display: block; font-size: 10px; ma
 				<strong>FUNGILANDIA</strong> es un sueño para compartir, con cursos realizados por expertos sobre el cultivo
 				 de Hongos donde aseguramos que tu tambien seras capaz de cambiar el rumbo del mundo
 			</div>
-			<video class="video_principal" height="380px;" controls>
-				<source src="video/video completo para Website 1080.mp4" type="video/mp4">
-			</video>
+
+				<iframe src="https://drive.google.com/file/d/1Hs9R-LqUqsLw33ERru3wSdRbE96Wt3Fj/preview" width="640" height="380" allow="autoplay"></iframe>
 				<button type="button" class="button_redirect_class btn"><i class="fas fa-users-class"></i></button>
 		</div>
-
 
   	<div class="benefits">
       <div class="page_container">
