--- a/index.html
+++ b/index.html
@@ -635,6 +635,7 @@ body #bsap_aplink, body #bsap_aplink:hover { display: block; font-size: 10px; ma
 		</div>
 
 		<div class="" style="background:moccasin;">
+			<iframe class="video_principal" src="https://drive.google.com/file/d/1Hs9R-LqUqsLw33ERru3wSdRbE96Wt3Fj/preview" height="350" allow="autoplay"></iframe>
 			<div class="text_inf-video">
 				<img class="img-video" src="video/sticker 04.png" alt="">
 				<h5 class="text_inf">Clases con profecionales!</h5>
@@ -642,8 +643,6 @@ body #bsap_aplink, body #bsap_aplink:hover { display: block; font-size: 10px; ma
 				<strong>FUNGILANDIA</strong> es un sueño para compartir, con cursos realizados por expertos sobre el cultivo
 				 de Hongos donde aseguramos que tu tambien seras capaz de cambiar el rumbo del mundo
 			</div>
-
-				<iframe src="https://drive.google.com/file/d/1Hs9R-LqUqsLw33ERru3wSdRbE96Wt3Fj/preview" width="640" height="380" allow="autoplay"></iframe>
 				<button type="button" class="button_redirect_class btn"><i class="fas fa-users-class"></i></button>
 		</div>
 
